<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:theme="@style/myTheme">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview" />

        <ListView
            android:id="@+id/epithetsList"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:entries="@array/epithets"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

        </ListView>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview2" />

        <RelativeLayout
            android:id="@+id/myRel"
            android:layout_width="wrap_content"
            android:layout_height="88dp">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:entries="@array/nouns"
                android:minHeight="48dp"
                android:visibility="visible"
                tools:ignore="SpeakableTextPresentCheck" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="@string/textview3" />

        <RadioGroup
            android:id="@+id/radios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent">

            <RadioButton
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:text="@string/kotlin" />

            <RadioButton
                android:id="@+id/java"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:text="@string/java" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Верхний регистр" />

        <Button
            android:id="@+id/button"
            style="@style/myStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button" />

        <TextView
            android:id="@+id/selection"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/textview4"

            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Добавление элемента" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Удаление выбранного элемента" />

        <EditText
            android:id="@+id/addvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Значение" />
    </LinearLayout>

</RelativeLayout>